# LEXGUARD_PromptWars

./: .env.example  .gitignore  Makefile  docker-compose.yml  eslint.config.mjs  package.json  pnpm-lock.yaml  pyproject.toml  requirements-dev.txt  requirements-optional-ocr.txt  requirements.txt
apps/api/: Dockerfile  pyproject.toml
apps/api/src/lexguard_api/: config.py  dependencies.py  main.py
apps/api/src/lexguard_api/middleware/: private_network.py
apps/api/src/lexguard_api/routes/: benchmarks.py  clauses.py  consequences.py  documents.py  health.py  orchestrator.py  orchestrator_ws.py  risk.py  websocket.py
apps/api/tests/: test_clauses.py  test_documents.py  test_health.py  test_risk.py
apps/web/: .env.example  Dockerfile  next.config.ts  package.json  tailwind.config.ts  tsconfig.json
apps/web/src/app/: globals.css  layout.tsx  page.tsx
apps/web/src/components/: status-panel.tsx
apps/web/src/components/analysis/: agent-timeline.tsx  clause-panel.tsx  insights-panel.tsx  negotiation-cards.tsx  risk-heatmap.tsx  streaming-progress.tsx
apps/web/src/components/layout/: app-header.tsx
apps/web/src/components/pdf/: pdf-viewer.tsx
apps/web/src/components/ui/: badge.tsx  button.tsx  card.tsx  progress.tsx  scroll-area.tsx  tabs.tsx
apps/web/src/components/upload/: dropzone.tsx
apps/web/src/components/workspace/: analyze-workspace.tsx
apps/web/src/hooks/: use-orchestrator-stream.ts
apps/web/src/lib/: api.ts  utils.ts  websocket.ts
apps/web/src/stores/: analysis-store.ts
scripts/: clean-local.ps1  dev-web.ps1
workers/analyze-worker/: Dockerfile  pyproject.toml
workers/analyze-worker/src/lexguard_analyze_worker/: __main__.py  config.py
