[project]
name = "lexguard-analyze-worker"
version = "0.1.0"
description = "Background analysis worker for LEXGUARD"
requires-python = ">=3.12"
dependencies = [
    "lexguard-shared",
    "lexguard-agents",
    "lexguard-ai",
    "lexguard-ingestion",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/lexguard_analyze_worker"]

[tool.uv.sources]
lexguard-shared = { workspace = true }
lexguard-agents = { workspace = true }
lexguard-ai = { workspace = true }
lexguard-ingestion = { workspace = true }

[project.scripts]
lexguard-analyze-worker = "lexguard_analyze_worker.__main__:main"
